@@ -26,13 +26,13 @@ module Fairy
 
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
-CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
+  CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
 ##CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
-CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
+  CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 
 ##CONF.N_MOD_GROUP_BY = 5
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
@@ -46,7 +46,7 @@ CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 ##CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 
 ##CONF.VF_ROOT = CONF.HOME+"/Repos"
-  CONF.VF_ROOT = CONF.HOME+"/test/Repos"
+  CONF["emperor2"].VF_ROOT = CONF.HOME+"/test/Repos"
 ##CONF.VF_PREFIX = `hostname`.chomp 
 #- CONF.VF_PREFIX use client setting.
 #  (ja_JP.utf-8: CONF.VF_PREFIXはクライアントのものが使われる)
@@ -59,18 +59,17 @@ CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 ##CONF.LOG_LEVEL = :DEBUG
 #CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
-CONF.LOG_IMPORT_NTIMES_POP = 10000
+  CONF["emperor2"].LOG_IMPORT_NTIMES_POP = 10000
 
 ##  CONF.PROCESSOR_MON_ON = true
 ##  CONF.PROCESSOR_MON_INTERVAL = 60
-#CONF.PROCESSOR_MON_INTERVAL = 10
+  CONF["emperor2"].PROCESSOR_MON_INTERVAL = 10
 ##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
 
 ##CONF.USE_RESOLV_REPLACE = false
 
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
-#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
 ##CONF.DEBUG_MONITOR_ON = false
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
