@@ -1,3 +1,8 @@
+Mon Apr 27 02:00:52 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* fairy.conf, processor.rb, conf.rb: [SR#87] processorのモニタリン
+	  グ機能強化
+
 Fri Apr 24 19:12:25 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* fairy.conf, processor.rb, conf.rb: [SR#87] processorのモニタリン
